fixed errors with loading css files

--- a/templates/base-registered.html
+++ b/templates/base-registered.html
@@ -11,10 +11,12 @@
 
     <!-- Bootstrap Core CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-    <link href={%  static "css/modern-business.css" %}rel="stylesheet">
-    <script src={%  static "js/bootstrap.min.js" %}></script>
+    <link href="{%  static 'css/modern-business.css' %}" rel="stylesheet">
 
+    <script src="{% static 'js/jquery.js' %}"></script>
+    <script src="{%  static 'js/bootstrap.min.js' %}"></script>
 
+    <script src="{% static 'js/carousel.js' %}"></script>
 
 </head>
 <body>
