--- a/templates/user-outside.html
+++ b/templates/user-outside.html
@@ -6,8 +6,8 @@
 
     <!-- Custom Fonts -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-    <link href={%  static "css/user_style.css" %} rel="stylesheet">
-	<script scr={%  static "js/user.js" %}></script>
+    <link href="{%  static 'css/user_style.css' %}" rel="stylesheet">
+	<script scr="{%  static 'js/user.js' %}"></script>
 
 </head>
 
