--- a/templates/user-inside.html
+++ b/templates/user-inside.html
@@ -7,7 +7,7 @@
 
     <!-- Custom Fonts -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-    <link href="{%  static 'css/user_style.css %}" rel="stylesheet">
+    <link href="{%  static 'css/user_style.css' %}" rel="stylesheet">
 
     <link href="{%  static 'css/user_style.css' %}" rel="stylesheet">
     <link rel="stylesheet" href="http://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
