--- a/templates/main-reg.html
+++ b/templates/main-reg.html
@@ -6,13 +6,34 @@
     {#    !!!add city script#}
     <!-- Custom CSS -->
     <link rel="stylesheet" href="http://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
+    <link href="css/bootstrap.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+     <link href="css/bootstrap.min.css" rel="stylesheet" media="screen">
+     <link href="css/bootstrap-datetimepicker.min.css" rel="stylesheet" media="screen">
+     <link href="css/fileinput.css" media="all" rel="stylesheet" type="text/css"/>
+     <link href="themes/explorer/theme.css" media="all" rel="stylesheet" type="text/css"/>
 
+    <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+     <script src="bootstrap-dropselect.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.0.7/angular.min.js"></script>
+     <!-- <script src="js/plugins/sortable.js" type="text/javascript"></script> -->
+    <script src="js/fileinput.js" type="text/javascript"></script>
+
+
+    <link href="css/custom.css" rel="stylesheet">
 
     <!-- Custom Fonts -->
     <script src={%  static "js/jquery.js" %}></script>
 
     <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
     <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+
+        <script type="text/javascript" src="./jquery/jquery-1.8.3.min.js" charset="UTF-8"></script>
+    <script type="text/javascript" src="js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="js/bootstrap-datetimepicker.js" charset="UTF-8"></script>
+    <script type="text/javascript" src="js/locales/bootstrap-datetimepicker.fr.js" charset="UTF-8"></script>
+    <script type="text/javascript" src="js/custom-data.js"></script>
+    <script type="text/javascript" src="js/custom-file.js"></script>
 </head>
 
 {% block content %}
@@ -287,37 +308,18 @@
                                             <option>Інше</option>
                                         </select>
                                     </div>
-                                    <div class="col-xs-6">
-                                    </div>
-                                </div>
-                            </div>
-                            <!-- <div class="container"> -->
-                            <div class="row">
-                                <div class='col-sm-6'>
-                                    <div class="form-group">
-                                        <div class='input-group date' id='datetimepicker5'>
-                                            <input type='text' class="form-control"/>
-                                            <span class="input-group-addon">
-                        <span class="glyphicon glyphicon-calendar"></span>
-                    </span>
-                                        </div>
-                                    </div>
-                                </div>
-                                <script type="text/javascript">
-                                    $(function () {
-                                        $('#datetimepicker5').datetimepicker({
-                                            defaultDate: "11/1/2013",
-                                            disabledDates: [
-                                                moment("12/25/2013"),
-                                                new Date(2013, 11 - 1, 21),
-                                                "11/22/2013 00:53"
-                                            ]
-                                        });
-                                    });
-                                </script>
-                            </div>
-                            <!-- </div> -->
 
+                                <div class="col-xs-6">
+
+                                  <label for="example-text-input" class="col-2 col-form-label">Виберіть дату і час</label>
+                                  <div class="input-group date form_datetime" data-date="1979-09-16T05:25:07Z" data-date-format="dd MM yyyy - HH:ii p" data-link-field="dtp_input1">
+                                      <input  class="form-control" type="text" id="example-text-input" placeholder="Введіть назву події" name="user" ng-model="user">
+                                      <span class="input-group-addon"><span class="glyphicon glyphicon-remove"></span></span>
+                            <span class="input-group-addon"><span class="glyphicon glyphicon-th"></span></span>
+                                  </div>
+                                         </div>
+                                          </div>
+                                      </div>
 
                             <p class="text-muted">Контакти:</p>
 
@@ -362,6 +364,22 @@
                                 <label for="comment">Опис події</label>
                                 <textarea class="form-control" rows="5" id="comment"></textarea>
                             </div>
+                            <form enctype="multipart/form-data">
+
+        <!-- <div class="form-group"> -->
+        <!-- </div> -->
+
+
+
+                        <div class="form-group">
+                            <input id="file-4" type="file" class="file" data-upload-url="#">
+                        </div>
+
+                     <!-- <form enctype="multipart/form-data"> -->
+
+
+                    </form>
+
 
 
                             <button type="button" class="btn btn-success">Зареєструватись</button>
