changed links and scripts (incorrect syntax was before)

--- a/templates/base-registered.html
+++ b/templates/base-registered.html
@@ -13,10 +13,14 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <link href="{%  static 'css/modern-business.css' %}" rel="stylesheet">
 
+    {% block css %}
+    {% endblock %}
+
     <script src="{% static 'js/jquery.js' %}"></script>
     <script src="{%  static 'js/bootstrap.min.js' %}"></script>
-
     <script src="{% static 'js/carousel.js' %}"></script>
+    {% block js %}
+    {% endblock %}
 
 </head>
 <body>
