--- a/templates/enter.html
+++ b/templates/enter.html
@@ -3,7 +3,7 @@
 
 
 <head>
- <script src={% static "js/jquery.js" %}></script> {#check whether it is needed#}
+{# <script src={% static "js/jquery.js" %}></script> {#check whether it is needed#}
 </head>
 {% block content %}
     <div class="container">
