--- a/templates/user-outside.html
+++ b/templates/user-outside.html
@@ -2,13 +2,13 @@
 {% load static %}
 
 <head> <!---->
-
-
-    <!-- Custom Fonts -->
+    {% block css %}
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <link href="{%  static 'css/user_style.css' %}" rel="stylesheet">
-	<script scr="{%  static 'js/user.js' %}"></script>
-
+	{% endblock %}
+    {% block js %}
+    <script scr="{%  static 'js/user.js' %}"></script>
+    {% endblock %}
 </head>
 
 {% content body %}
