changed links and scripts (incorrect syntax was before), added text areas for inside pages, solved some problems, that prevented pages loading

--- a/templates/organization-outside.html
+++ b/templates/organization-outside.html
@@ -6,11 +6,9 @@
     <link href="{% static 'css/user_style.css' %}" rel="stylesheet">
     {% endblock %}
     {% block js %}
-    <script src="{%  static 'js/jquery.js' %}"></script>
     <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
-{#	<script src="{%  static 'js/out-org.js' %}"></script>#}
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-multiselect/0.9.13/js/bootstrap-multiselect.js"></script>
-    <script src="{% static 'js/carousel.js' %}"></script>
+    <script src="{% static 'js/carousel-org.js' %}"></script>
 
     {% endblock %}
 </head>
@@ -93,6 +91,7 @@
 
 
 <hr id="user_hr">
+
         <div class="row">
 <div class="col-md-12">
   <ul class="nav nav-tabs">
