--- a/templates/user-outside.html
+++ b/templates/user-outside.html
@@ -11,7 +11,7 @@
     {% endblock %}
 </head>
 
-{% content body %}
+{% block content %}
 <div class="container">
 
         <!-- Page Heading/Breadcrumbs -->
