--- a/templates/event-inside.html
+++ b/templates/event-inside.html
@@ -3,9 +3,10 @@
 
 <head>
     {% block css %}
-        <link href="{% static 'css/try_comments.css' %}" rel="stylesheet">
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-        <link href={% static 'css/user_style.css' %} rel="stylesheet">
+{#    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">#}
+    <link rel="stylesheet" href="http://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-multiselect/0.9.13/css/bootstrap-multiselect.css" type="text/css">
+    <link href="{% static 'css/user_style.css' %}" rel="stylesheet">
     {% endblock %}
 
     {% block js %}
@@ -31,11 +32,9 @@
                 <h1 class="page-header">Старший брат</h1>
             </div>
             <div class="col-lg-12">
-                <ol class="breadcrumb">
-                    <li><a class="fnt-header" href="index.html">допоможи дітям-сиротам із виконанням домашніх
-                        завдань</a>
-                    </li>
-                </ol>
+                <div class="form-group">
+  <textarea class="form-control" placeholder="Введіть коротку інформацію про подію" rows="1" id="comment"></textarea>
+</div>
             </div>
 
         </div>
@@ -53,7 +52,7 @@
                 </div>
                 <div class="user like-share">
 
-                    <a class="btn btn-default like" role="button" href="event_outside_my.html">Зберегти</a>
+                    <a class="btn btn-default like" role="button" href="^event-outside/">Зберегти</a>
                 </div>
 
             </div>
@@ -71,11 +70,11 @@
                         </select>
                     </div>
                     <div class="input-group">
-                        <span class="input-group-addon addon-org">Місто</span>
-                        <div class="ui-widget">
-                            <input id="tags" class="form-control">
-                        </div>
-                    </div>
+            <span class="input-group-addon addon-org">Місто</span>
+                <div class="ui-widget">
+                  <input id="tags" class="form-control">
+                </div>
+            </div>
                     <div class="input-group">
                         <span class="input-group-addon addon-org">Адреса</span>
                         <input id="msg" type="text" class="form-control" name="msg" placeholder="Additional Info">
@@ -124,36 +123,12 @@
         <hr id="user_hr">
 
         <div class="row">
-            <div class="col-md-11">
-                <h3>Додаткова інформація</h3>
-                <p>Працюємо із неповносправними дітьми. Вони потребують вашої підтримки!</p>
-                <p>Працюємо із неповносправними дітьми. Вони потребують вашої підтримки!
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
-                    et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-                    aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-                    cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-                    culpa qui officia deserunt mollit anim id est laborumLorem ipsum dolor sit amet, consectetur
-                    adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
-                    veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute
-                    irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-                    Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id
-                    est laborumLorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
-                    ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
-                    nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit
-                    esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-                    culpa qui officia deserunt mollit anim id est laborumLorem ipsum dolor sit amet, consectetur
-                    adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
-                    veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute
-                    irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-                    Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id
-                    est laborumLorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
-                    ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
-                    nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit
-                    esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-                    culpa qui officia deserunt mollit anim id est laborum
-                </p>
-
-            </div>
+        <div class="col-lg-12">
+ <div class="form-group">
+{# <span class="input-group-addon addon-org">Детальна інформація</span>#}
+  <textarea class="form-control" placeholder="Введіть детальну інформацію про подію" rows="5" id="comment"></textarea>
+</div>
+        </div>
         </div>
     </div>
 
