--- a/templates/main.html
+++ b/templates/main.html
@@ -4,6 +4,8 @@
 <head>
     {% block css %}
     <link href={% static "css/custom.css" %} rel="stylesheet">
+    <link href={% static "css/main-style.css" %} rel="stylesheet">
+
     {% endblock %}
 
     {% block js %}
