--- a/templates/organization-inside.html
+++ b/templates/organization-inside.html
@@ -30,11 +30,10 @@
 
         </div>
         <div class="col-lg-12">
-  <ol class="breadcrumb">
-  <li><a class="fnt-header" href="index.html">ми допомагаємо дітям-сиротам із виконанням домашніх завдань</a>
-  </li>
-  </ol>
-  </div>
+                <div class="form-group">
+  <textarea class="form-control" placeholder="Введіть коротку інформацію про подію" rows="1" id="comment"></textarea>
+</div>
+            </div>
   </div>
         <!-- /.row -->
 
@@ -88,6 +87,16 @@
             </div>
             </ul>
             </div>
+        </div>
+            <hr id="user_hr">
+
+        <div class="row">
+        <div class="col-lg-12">
+ <div class="form-group">
+{# <span class="input-group-addon addon-org">Детальна інформація</span>#}
+  <textarea class="form-control" placeholder="Введіть детальну інформацію про подію" rows="5" id="comment"></textarea>
+</div>
+        </div>
         </div>
 </div>
 {% endblock %}
