--- a/templates/user-inside.html
+++ b/templates/user-inside.html
@@ -34,11 +34,10 @@
                 <h1 class="page-header">Taras Shevchenko</h1>
             </div>
             <div class="col-lg-12">
-  <ol class="breadcrumb">
-  <li><a class="fnt-header" href="index.html">я допомагаю дітям-сиротам із виконанням домашніх завдань, я допомагаю дітям-сиротам із виконанням домашніх завдань, я допомагаю дітям-сиротам із виконанням домашніх завдань, я допомагаю дітям-сиротам із виконанням домашніх завдань</a>
-  </li>
-  </ol>
-  </div>
+                <div class="form-group">
+  <textarea class="form-control" placeholder="Введіть коротку інформацію про себе" rows="1" id="comment"></textarea>
+</div>
+            </div>
         </div>
         <!-- /.row -->
 
@@ -66,11 +65,11 @@
                      </select>
                    </div>
                    <div class="input-group">
-                  <span class="input-group-addon addon-org">Місто</span>
-                      <div class="ui-widget">
-                        <input id="tags" class="form-control">
-                      </div>
-                  </div>
+            <span class="input-group-addon addon-org">Місто</span>
+                <div class="ui-widget">
+                  <input id="tags" class="form-control">
+                </div>
+            </div>
                   <div class="input-group">
             <span class="input-group-addon addon-org">Адреса</span>
             <input id="msg" type="text" class="form-control" name="msg" placeholder="Additional Info">
