--- a/templates/base-registered.html
+++ b/templates/base-registered.html
@@ -52,7 +52,7 @@
 
                     </li>
                     <li>
-                        <a href="user_outside.html"><span class="glyphicon glyphicon-user"></span>Моя сторінка</a>
+                        <a href="user_outside/"><span class="glyphicon glyphicon-user"></span>Моя сторінка</a>
                     </li>
                 </ul>
             </div>
@@ -79,7 +79,7 @@
       </div>
       <div class="col-md-3">
         <ul class="nav nav-pills nav-stacked">
-          <li><a href="#">Наша команда</a></li>
+          <li><a href="our_team/">Наша команда</a></li>
         </ul>
       </div>
       <div class="col-md-3">
