Adding new js files

--- a/templates/base-unregistered.html
+++ b/templates/base-unregistered.html
@@ -13,6 +13,9 @@
     <!-- Bootstrap Core CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <link href={%  static "css/modern-business.css" %} rel="stylesheet">
+    <link rel="stylesheet" href= "https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
+
      <script src={%  static "js/bootstrap.min.js" %}></script>
 
 </head>
@@ -40,16 +43,16 @@
                     </li>
 
                     <li>
-                        <a href="search.html">Пошук</a>
+                        <a href="new-search.html"><span class="glyphicon glyphicon-search"></span> Пошук</a>
                     </li>
 
                     </li>
 
                     <li>
-                        <a href="enter.html"><span class="glyphicon glyphicon-user"></span>Увійти</a>
+                        <a href="enter.html"><span class="glyphicon glyphicon-user"></span> Увійти</a>
                     </li>
                     <li>
-                        <a href="contact.html">Зареєструватись</a>
+                        <a href="main-reg.html"> Зареєструватись</a>
                     </li>
                 </ul>
             </div>
