--- a/templates/base-registered.html
+++ b/templates/base-registered.html
@@ -9,12 +9,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>DOPOMOGARAZOM</title>
 
-    <!-- Bootstrap Core CSS -->
+{#css starts#}
+
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <link href="{%  static 'css/modern-business.css' %}" rel="stylesheet">
     <link rel="stylesheet" href= "https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     {% block css %}
     {% endblock %}
+    <!-- css ends -->
 
     <script src="{% static 'js/jquery.js' %}"></script>
     <script src="{%  static 'js/bootstrap.min.js' %}"></script>
