--- a/templates/main.html
+++ b/templates/main.html
@@ -2,11 +2,12 @@
 {% load static %} 
 
 <head>
+{#css starts#}
     {% block css %}
     <link href={% static "css/custom.css" %} rel="stylesheet">
     <link href={% static "css/main-style.css" %} rel="stylesheet">
     {% endblock %}
-
+{#css ends#}
     {% block js %}
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
