--- a/templates/base.html
+++ b/templates/base.html
@@ -58,6 +58,9 @@
                     <li>
                         <a href="user_outside.html"><span class="glyphicon glyphicon-user"></span>Моя сторінка</a>
                     </li>
+                      <li>
+                        <a href="logout/"><span class="glyphicon glyphicon-user"></span>Вийти</a>
+                    </li>
                 </ul>
             </div>
             <!-- /.navbar-collapse -->
@@ -82,20 +85,20 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
                     <li>
-                        <a href="about.html">Організації</a>
+                        <a href="/about_us/">Організації</a>
                     </li>
                     <li>
-                        <a href="about.html">Події</a>
+                        <a href="/about_us/">Події</a>
                     </li>
 
                     <li>
-                        <a href="search.html">Пошук</a>
+                        <a href="/search/">Пошук</a>
                     </li>
 
                     </li>
 
                     <li>
-                        <a href="enter.html"><span class="glyphicon glyphicon-user"></span>Увійти</a>
+                        <a href="/enter/"><span class="glyphicon glyphicon-user"></span>Увійти</a>
                     </li>
                     <li>
                         <a href="contact.html">Зареєструватись</a>
