--- a/templates/base-registered.html
+++ b/templates/base-registered.html
@@ -57,6 +57,9 @@
                     <li>
                         <a href="user_outside/"><span class="glyphicon glyphicon-user"></span>Моя сторінка</a>
                     </li>
+                    <li>
+                        <a href="logout/"><span class="glyphicon glyphicon-user"></span>Вийти</a>
+                    </li>
                 </ul>
             </div>
             <!-- /.navbar-collapse -->
