--- a/templates/base-registered.html
+++ b/templates/base-registered.html
@@ -14,12 +14,17 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <link href="{%  static 'css/modern-business.css' %}" rel="stylesheet">
     <link rel="stylesheet" href= "https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link href="{%  static 'css/main-style.css' %}" rel="stylesheet">
+
+
     {% block css %}
     {% endblock %}
     <!-- css ends -->
 
     <script src="{% static 'js/jquery.js' %}"></script>
     <script src="{%  static 'js/bootstrap.min.js' %}"></script>
+    <script src="{%  static 'js/main-header.js' %}"></script>
+
 {#    <script src="{% static 'js/carousel.js' %}"></script>#}
 
     {% block js %}
@@ -27,7 +32,7 @@
 
 </head>
 <body>
-    <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+    <nav class="navbar navbar-inverse navbar-fixed-top" id="header-cont" role="navigation">
         <div class="container">
             <!-- Brand and toggle get grouped for better mobile display -->
             <div class="navbar-header">
@@ -37,7 +42,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="index.html">VOLONTER</a>
+                <a class="navbar-brand" href="#"><img id="ripka_logo" src="{% static 'static/ripka_logo_1.png' %}"></a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
