--- a/templates/base-unregistered.html
+++ b/templates/base-unregistered.html
@@ -11,16 +11,23 @@
     <title>DOPOMOGARAZOM</title>
 
     <!-- Bootstrap Core CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-    <link href={%  static "css/modern-business.css" %} rel="stylesheet">
+{#    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">#}
+{#    <link href={%  static "css/modern-business.css" %} rel="stylesheet">#}
+{#    <link rel="stylesheet" href= "https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">#}
+
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <link href="{%  static 'css/modern-business.css' %}" rel="stylesheet">
     <link rel="stylesheet" href= "https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link href="{%  static 'css/main-style.css' %}" rel="stylesheet">
 
 
      <script src={%  static "js/bootstrap.min.js" %}></script>
+    <script src={%  static "js/bootstrap.main-header.js" %}></script>
+
 
 </head>
 <body>
-<nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+<nav class="navbar navbar-inverse navbar-fixed-top" id="header-cont" role="navigation">
         <div class="container">
             <!-- Brand and toggle get grouped for better mobile display -->
             <div class="navbar-header">
@@ -30,7 +37,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="index.html">VOLONTER</a>
+                <a class="navbar-brand" href="index.html"><img id="ripka_logo" src="{% static 'static/ripka_logo_1.png' %}"></a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -96,6 +103,7 @@
                         <a href="#" class="icoLinkedin" title="Linkedin"><i class="fa fa-linkedin"></i></a>
                       </ul>
         </div>
+        </ul>
       </div>
     </div>
   </div>
