--- a/templates/base.html
+++ b/templates/base.html
@@ -13,6 +13,8 @@
     <!-- Bootstrap Core CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <link href="{%  static 'css/modern-business.css' %}" rel="stylesheet">
+    <link href="{%  static 'css/main-style.css' %}" rel="stylesheet">
+
 
     {% block css %}
     {% endblock %}
@@ -20,6 +22,8 @@
     <script src="{% static 'js/jquery.js' %}"></script>
     <script src="{%  static 'js/bootstrap.min.js' %}"></script>
     <script src="{% static 'js/carousel.js' %}"></script>
+    <script src="{%  static 'js/main-header.js' %}"></script>
+
     {% block js %}
     {% endblock %}
 
@@ -28,7 +32,7 @@
 <body>
 {% if logged_in %}
 
-       <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+       <nav class="navbar navbar-inverse navbar-fixed-top" id="header-cont" role="navigation">
         <div class="container">
             <!-- Brand and toggle get grouped for better mobile display -->
             <div class="navbar-header">
@@ -38,8 +42,8 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="index.html">VOLONTER</a>
-            </div>
+                <a class="navbar-brand" href="index.html"><img id="ripka_logo" src="{% static 'static/ripka_logo_1.png' %}"></a>
+                </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
@@ -79,7 +83,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="index.html">VOLONTER</a>
+                <a class="navbar-brand" href="index.html"><img id="ripka_logo" src="{% static 'static/ripka_logo_1.png' %}"></a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
