--- a/templates/main.html
+++ b/templates/main.html
@@ -4,8 +4,11 @@
 <head>
 {#css starts#}
     {% block css %}
-    <link href={% static "css/custom.css" %} rel="stylesheet">
-    <link href={% static "css/main-style.css" %} rel="stylesheet">
+{#    <link href={% static "css/custom.css" %} rel="stylesheet">#}
+{#    <link href={% static "css/main-style.css" %} rel="stylesheet">#}
+
+      <link href="{% static 'css/mdb.min.css' %}" rel="stylesheet">
+
     {% endblock %}
 {#css ends#}
     {% block js %}
@@ -13,12 +16,16 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <script src="bootstrap-dropselect.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.0.7/angular.min.js"></script>
-    <script type="text/javascript" src={%  static "js/bootstrap-filestyle.min.js" %}> </script>
+    <script type="text/javascript" src="{%  static 'js/bootstrap-filestyle.min.js' %}"> </script>
+        <script type="text/javascript" src="{% static 'js/tether.min.js' %}"></script>
+        <script type="text/javascript" src="{% static 'js/mdb.min.js' %}"></script>
+
+
     {% endblock %}
 </head>
 
 {% block content %}
-<header id="myCarousel" class="carousel slide">
+<header id="myCarousel" class="carousel slide container">
         <!-- Indicators -->
         <ol class="carousel-indicators">
             <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
@@ -57,6 +64,7 @@
             <span class="icon-next"></span>
         </a>
 </header>
+
     <div class="container">
 
         <!-- Marketing Icons Section -->
