added cities to city_tags, modified city_search for search

--- a/templates/base.html
+++ b/templates/base.html
@@ -8,12 +8,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>DOPOMOGARAZOM</title>
+    <title>RIPKA</title>
 
     <!-- Bootstrap Core CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+<link href="{% static 'css/mdb.min.css' %}" rel="stylesheet">
+
     <link href="{%  static 'css/modern-business.css' %}" rel="stylesheet">
+{#<link rel="stylesheet" href= "https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">#}
     <link href="{%  static 'css/main-style.css' %}" rel="stylesheet">
+
 
 
     {% block css %}
@@ -21,6 +25,8 @@
 
     <script src="{% static 'js/jquery.js' %}"></script>
     <script src="{%  static 'js/bootstrap.min.js' %}"></script>
+   <script type="text/javascript" src="{% static 'js/tether.min.js' %}"></script>
+    <script type="text/javascript" src="{% static 'js/mdb.min.js' %}"></script>
     <script src="{% static 'js/carousel.js' %}"></script>
     <script src="{%  static 'js/main-header.js' %}"></script>
 
