--- a/static/css/main-style.css
+++ b/static/css/main-style.css
@@ -9,24 +9,24 @@
   color: white;
 }
 .navbar .navbar-right li:first-child{
-  background: #006203;
+  background: #008804;
 }
 
 .navbar .navbar-right li:nth-child(2){
-    background: rgba(15, 151, 0, 0.71);
+    background: rgb(72, 142, 46);
 }
 
 .navbar .navbar-right li:nth-child(3){
-  background: rgba(48, 203, 0, 0.77);
+  background: rgb(112, 211, 62);
 }
 
 .navbar .navbar-right li:nth-child(4){
-    background: rgba(74, 229, 74, 0.72);
+    background: rgb(96, 200, 92);
 
 }
 
 .navbar .navbar-right li:nth-child(5){
-    background: #006203;
+  background: #008804;
 
 }
 
@@ -38,8 +38,9 @@
 }
 
 #header-cont {
-  background: rgba(0, 0, 0, 0.65);
-  border: none;
+  background: rgba(0,0,0,0.65);
+    border: none !important;
+  border-color: transparent !important;
 }
 
 
@@ -74,7 +75,8 @@
   }
 
 #ripka_logo {
-  margin-top: 4%;
+  margin-top: 2.5%;
+    margin-left: -4.5%;
   width: 35%;
 }
 
@@ -89,7 +91,7 @@
 }
 
 .navbar-right {
-  padding: 0 15px;
+  /*padding: 0 15px;*/
   height: 80px;
   line-height: 80px;
 }
@@ -103,11 +105,11 @@
 }
 
 .pagination li a {
-    color: #006203;
+    color: #931985;
 }
 
 .pagination > .active > a, .pagination > .active > a:focus, .pagination > .active > a:hover, .pagination > .active > span, .pagination > .active > span:focus, .pagination > .active > span:hover {
-    background: #006203;
+    background: #935987;
 }
 
 
