--- a/templates/main.html
+++ b/templates/main.html
@@ -7,7 +7,7 @@
 {#    <link href={% static "css/custom.css" %} rel="stylesheet">#}
 {#    <link href={% static "css/main-style.css" %} rel="stylesheet">#}
 
-      <link href="{% static 'css/mdb.min.css' %}" rel="stylesheet">
+{#      <link href="{% static 'css/mdb.min.css' %}" rel="stylesheet">#}
 
     {% endblock %}
 {#css ends#}
@@ -17,8 +17,8 @@
     <script src="bootstrap-dropselect.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.0.7/angular.min.js"></script>
     <script type="text/javascript" src="{%  static 'js/bootstrap-filestyle.min.js' %}"> </script>
-        <script type="text/javascript" src="{% static 'js/tether.min.js' %}"></script>
-        <script type="text/javascript" src="{% static 'js/mdb.min.js' %}"></script>
+{#        <script type="text/javascript" src="{% static 'js/tether.min.js' %}"></script>#}
+{#        <script type="text/javascript" src="{% static 'js/mdb.min.js' %}"></script>#}
 
 
     {% endblock %}
