--- a/templates/base.html
+++ b/templates/base.html
@@ -62,7 +62,7 @@
                     </li>
 
                     <li>
-                        <a href="/not_available/">Пошук</a>
+                        <a href="/search/">Пошук</a>
                     </li>
 
                     </li>
