--- a/static/css/main-style.css
+++ b/static/css/main-style.css
@@ -60,9 +60,14 @@
   color: white;
 }
 
-.btn-default:hover, .btn-default:active, .btn-default:focus, .btn-default.active,  .btn-default:active:focus {
+.btn-default:hover, .btn-default:active, .btn-default:focus, .btn-default.active {
   background: #933977;
   color: white;
+}
+
+.btn-default:active:focus {
+  background: #641e51;
+
 }
 
 
