--- a/templates/search.html
+++ b/templates/search.html
@@ -4,9 +4,9 @@
 <head>
     {#  !!!  add city stript#}
     {% block css %}
-        <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
-        <link href="{% static 'css/bootstrap.css' %}" rel="stylesheet">
-        <link rel="stylesheet" href="http://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
+{#        <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">#}
+{#        <link href="{% static 'css/bootstrap.css' %}" rel="stylesheet">#}
+{#        <link rel="stylesheet" href="http://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">#}
     {% endblock %}
 
     {% block js %}
@@ -66,7 +66,7 @@
                                 <form class="form-inline" action="#" method="POST">
                                     <center>
                                         <div class="form-group">
-                                            <input type="email" class="form-control" id="exampleInputEmail1"
+                                            <input class="form-control" id="exampleInputEmail1"
                                                    aria-describedby="emailHelp" placeholder=" tag пошук(маєбути)">
                                         </div>
 
