--- a/static/css/main-style.css
+++ b/static/css/main-style.css
@@ -52,7 +52,7 @@
 }
 
 .about a {
-  background-color: #933a85;
+  /*background-color: #933a85;*/
 }
 
 .btn-default {
@@ -118,6 +118,10 @@
     background: #935987;
 }
 
+
+/*footer styling*/
+
+/*end footer styling*/
 
 
 /*end main colorful style*/
