--- a/templates/organization-outside.html
+++ b/templates/organization-outside.html
@@ -75,13 +75,13 @@
                     <span class="input-group-addon addon-org">e-mail   </span>
                 <div class="form-control about" id="out_mail"><a href="https://mail.google.com">yaryna.korduba@gmail.com</a></div>
              </div>
-             <div class="input-group">
-               <span class="input-group-addon addon-org">Знайдіть нас</span>
-               <div class="form-control about">
-               <img class="logo soc-logo" src="static/fb_logo.png"/>
-               <img class="logo soc-logo" src="static/twit_logo.png"/>
-               <img class="logo soc-logo" src="static/insta_logo.png"/>
-             </div>
+{#             <div class="input-group">#}
+{#               <span class="input-group-addon addon-org">Знайдіть нас</span>#}
+{#               <div class="form-control about">#}
+{#               <img class="logo soc-logo" src="static/fb_logo.png"/>#}
+{#               <img class="logo soc-logo" src="static/twit_logo.png"/>#}
+{#               <img class="logo soc-logo" src="static/insta_logo.png"/>#}
+{#             </div>#}
               </ul>
 
             </div>
