--- a/templates/user-inside.html
+++ b/templates/user-inside.html
@@ -7,7 +7,7 @@
 
     <!-- Custom Fonts -->
     {% block css %}
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+{#    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">#}
 
     <link rel="stylesheet" href="http://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-multiselect/0.9.13/css/bootstrap-multiselect.css" type="text/css">
@@ -72,7 +72,7 @@
             </div>
                   <div class="input-group">
             <span class="input-group-addon addon-org">Адреса</span>
-            <input id="msg" type="text" class="form-control" name="msg" placeholder="Additional Info">
+            <input id="msg" class="form-control" name="msg" placeholder="Additional Info">
             </div>
                    </ul>
             </div>
@@ -82,11 +82,11 @@
 
                    <div class="input-group">
             <span class="input-group-addon addon-org">Вебсайт</span>
-            <input id="msg" type="text" class="form-control" name="msg" placeholder="Additional Info">
+            <input id="msg" class="form-control" name="msg" placeholder="Additional Info">
             </div>
             <div class="input-group">
             <span class="input-group-addon addon-org">e-mail</span>
-            <input id="msg" type="text" class="form-control" name="msg" placeholder="Additional Info">
+            <input id="msg" class="form-control" name="msg" placeholder="Additional Info">
             </div>
                   </ul>
             </div>
