--- a/templates/organization-inside.html
+++ b/templates/organization-inside.html
@@ -69,7 +69,7 @@
             </div>
             <div class="input-group">
             <span class="input-group-addon addon-org">Адреса</span>
-            <input id="msg" type="text" class="form-control" name="msg" placeholder="Additional Info">
+            <input id="msg" class="form-control" name="msg" placeholder="Additional Info">
             </div>
             </ul>
             </div>
@@ -79,11 +79,11 @@
 
             <div class="input-group">
             <span class="input-group-addon addon-org">Наш вебсайт</span>
-            <input id="msg" type="text" class="form-control" name="msg" placeholder="Additional Info">
+            <input id="msg" class="form-control" name="msg" placeholder="Additional Info">
             </div>
             <div class="input-group">
             <span class="input-group-addon addon-org">e-mail</span>
-            <input id="msg" type="text" class="form-control" name="msg" placeholder="Additional Info">
+            <input id="msg" class="form-control" name="msg" placeholder="Additional Info">
             </div>
             </ul>
             </div>
