--- a/templates/search.html
+++ b/templates/search.html
@@ -6,7 +6,7 @@
     {% block css %}
 {#        <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">#}
 {#        <link href="{% static 'css/bootstrap.css' %}" rel="stylesheet">#}
-{#        <link rel="stylesheet" href="http://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">#}
+        <link rel="stylesheet" href="http://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
     {% endblock %}
 
     {% block js %}
