--- a/templates/user-outside.html
+++ b/templates/user-outside.html
@@ -3,7 +3,7 @@
 
 <head> <!---->
     {% block css %}
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+{#    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">#}
     <link href="{%  static 'css/user_style.css' %}" rel="stylesheet">
 	{% endblock %}
     {% block js %}
@@ -70,13 +70,13 @@
                     <span class="input-group-addon addon-org">e-mail   </span>
                 <div class="form-control about" id="out_mail"><a href="https://mail.google.com">yaryna.korduba@gmail.com</a></div>
              </div>
-             <div class="input-group">
-               <span class="input-group-addon addon-org">Знайдіть нас</span>
-               <div class="form-control about">
-               <img class="logo soc-logo" src="static/fb_logo.png"/>
-               <img class="logo soc-logo" src="static/twit_logo.png"/>
-               <img class="logo soc-logo" src="static/insta_logo.png"/>
-             </div>
+{#             <div class="input-group">#}
+{#               <span class="input-group-addon addon-org">Знайдіть нас</span>#}
+{#               <div class="form-control about">#}
+{#               <img class="logo soc-logo" src="static/fb_logo.png"/>#}
+{#               <img class="logo soc-logo" src="static/twit_logo.png"/>#}
+{#               <img class="logo soc-logo" src="static/insta_logo.png"/>#}
+{#             </div>#}
               </ul>
 
             </div>
